--- a/world.html
+++ b/world.html
@@ -11,26 +11,69 @@
 </head>
 <body>
     <header>
-        <a href="index.html">Terug naar Hoofdpagina</a>
+      <div class="homeknop">
+        <a href="index.html"><img src="./img/homebutton.png" alt=""></a>
+      </div>
+      <div class="patroon">
         <h1>Worldbuilding</h1>
-        <p>
-            <a href="character.html">Character Design</a>
-            Worldbuilding
-            <a href="dnd.html">D&D Script</a>
-        </p>
+    </div>
     </header>
-    <main>
-        <p>
-            <h2>Intro</h2>
-            Dit zijn mijn werelden.
-        </p>
-    </main>
+
+        <main>
+            <section class="introtekst">
+                <h2>Intro</h2>
+                <p>In dit deel van mijn portfolio heb ik het over worldbuilding. Voor mijn karakters en mijn Dungeons and Dragons campaigns bedenk ik altijf grote werelden.</p>
+            </section>
+
+        <section class="imagecard">
+           <img  width="100%" src="./portfotos/map1.jpeg">
+           <p>Adonis</p>
+        </section>
+
+        <section class="imagecard">
+            <img width="100%" src="./portfotos/map2.jpeg">
+            <p>Ai-Gon</p>
+        </section>
+
+         <section class="imagecard">
+            <img  width="100%" src="./portfotos/map3.jpeg">
+            <p>Lastrus</p>
+         </section>
+
+         <section class="imagecard">
+             <img width="100%" src="./portfotos/map4.jpeg">
+             <p>Lustria</p>
+         </section>
+                <article class="summary">
+                        <p>Ik zorg er altijd voor dat ik elke kaart en wereld met elkaar in verband kan brengen. Ik vind dit geweldig om te doen, hierdoor kan ik namelijk ook alle karakters, achtergronden en verhalen met elkaar mengen.</p>
+                </article>
+
+                <section class="btn30pct">
+                    <div class="btbg">
+                        <div class="bttxt">Character Design</div>
+                        <a href="character.html"><img src="./img/HKUopdracht4b.jpg" alt="Dit is de link die naar mijn character design tekeningen leid."></a>
+                    </div>
+                </section>
+
+                <section class="btn30pct">
+                    <div class="btbg">
+                        <div class="bttxt">D&D</div>
+                        <a href="dnd.html"><img src="./img/IMG_5397.jpeg" alt="Dit is de link die naar mijn Dungeons and Dragons script gaat."></a>
+                    </div>
+                </section>
+
+        </main>
+
     <footer>
-        <p>
-            <p>Naam:</p>
-            <p>Datum</p>
-            <p>Link:</p>
-        </p>
+        <div class="footertekst">
+            <hr>
+            <ul>
+                <li>Naam: Daniel Dijkstra</li>
+                <li>klas: Paars</li>
+                <li>Datum: 2023</li>
+                <li>Link: </li>
+            </ul>
+        </div>
     </footer>
 </body>
 </html>
