--- a/character.html
+++ b/character.html
@@ -11,26 +11,79 @@
 </head>
 <body>
     <header>
-        <a href="index.html">Terug naar Hoofdpagina</a>
+      <div class="homeknop">
+        <a href="index.html"><img src="./img/homebutton.png" alt=""></a>
+      </div>
+      <div class="patroon">
         <h1>Character Design</h1>
-        <p>
-            Character Design
-            <a href="world.html">Worldbuilding</a>
-            <a href="dnd.html">D&D Script</a>
-        </p>
-    </header>
-    <main>
-        <p>
-            <h2>Intro</h2>
-            Dit zijn mijn character designs.
-        </p>
-    </main>
+      </div>
+    </header> 
+
+        <main>
+            <article class="introtekst">
+                <h2>Intro</h2>
+                <p>In dit deel van mijn portfolio zet ik mijn character designs. Ik houd mij graag bezig met het designen van characters en bedenk vaak hun achtergronden, personaliteiten en omgevingen erbij.</p>
+            
+            </article>
+                <section class="imagecard">
+                   <img  width="100%" src="./portfotos/kar1.jpeg">
+                   <p>Sally</p>
+                </section>
+
+                <section class="imagecard">
+                    <img width="100%" src="./portfotos/kar2.jpeg">
+                    <p>D&D characters van vrienden</p>
+                </section>
+
+                 <section class="imagecard">
+                    <img  width="100%" src="./portfotos/kar3.jpeg">
+                    <p>Oorlogsrobot</p>
+                 </section>
+ 
+                 <section class="imagecard">
+                     <img width="100%" src="./portfotos/kar4.jpeg">
+                     <p>Gladiator Danny</p>
+                 </section>
+
+                  <section class="imagecard">
+                    <img  width="100%" src="./portfotos/kar5.jpeg">
+                    <p>Danny zonder helm en zijn vrienden</p>
+                  </section>
+ 
+                 <section class="imagecard">
+                     <img width="100%" src="./portfotos/kar7.jpeg">
+                     <p>Scammer hond</p>
+                 </section>
+                        <article class="summary">
+                            <p>Al deze characters leven in hun eigen wereld die ik ook heb uitgeschreven. In het onderdeel worldbuilding hieronder lees je meer over de werelden waarin deze karakters leven.</p>
+                        </article>
+
+                <section class="btn30pct">
+                    <div class="btbg">
+                        <div class="bttxt">Worldbuilding</div>
+                        <a href="world.html"><img src="./img/000EA6A6-1386-4C9F-859A-686B8D8A239B.jpeg" alt="Dit is de link die naar mijn worldbuilding leid."></a>
+                    </div>
+                </section>
+
+                <section class="btn30pct">
+                    <div class="btbg">
+                        <div class="bttxt">D&D</div>
+                        <a href="dnd.html"><img src="./img/IMG_5397.jpeg" alt="Dit is de link die naar mijn Dungeons and Dragons script gaat."></a>
+                    </div>
+                </section>
+
+        </main>
+
     <footer>
-        <p>
-            <p>Naam:</p>
-            <p>Datum</p>
-            <p>Link:</p>
-        </p>
+        <div class="footertekst">
+            <hr>
+            <ul>
+                <li>Naam: Daniel Dijkstra</li>
+                <li>klas: Paars</li>
+                <li>Datum: 2023</li>
+                <li>Link: </li>
+            </ul>
+        </div>
     </footer>
 </body>
 </html>
