--- a/index.html
+++ b/index.html
@@ -12,31 +12,49 @@
 <body>
         <header>
             <div class="patroon">
-                <h1 class="naam">Daniel's Portfolio</h1>
+                <h1>Daniel's Portfolio</h1>
             </div>
         </header>
-    <div class="hoofdtekst">
+
         <main>
-            <div class="introtekst">
+            <article class="introtekst">
                 <h2>Intro</h2>
                 <p>Ik ben Daniel Dijkstra en dit is mijn portfolio. Ik heb het opgedeeld in 3 delen: Character Design, Worldbuilding en DnD Script. In elke pagina zul je wat tekeningen en uitleg aantreffen.</p>
-            </div>
-            <p class="centreren">
-                <a class="zweven" href="character.html"><img src="./img/HKUopdracht4b.jpg" alt="Dit is de link die naar mijn character design tekeningen leid."></a>
-                <a href="world.html"><img src="./img/000EA6A6-1386-4C9F-859A-686B8D8A239B.jpeg" alt="Dit is de link die naar mijn worldbuilding leid."></a>
-                <a href="dnd.html"><img src="./img/IMG_5397.jpeg" alt="Dit is de link die naar mijn Dungeons and Dragons script gaat."></a>
-            </p>
+            </article>
+
+                <section class="btn30pct">
+                    <div class="btbg">
+                        <div class="bttxt">Character Design</div>
+                        <a href="character.html"><img src="./img/HKUopdracht4b.jpg" alt="Dit is de link die naar mijn character design tekeningen leid."></a>
+                    </div>
+                </section>
+
+                <section class="btn30pct">
+                    <div class="btbg">
+                        <div class="bttxt">Worldbuilding</div>
+                        <a href="world.html"><img src="./img/000EA6A6-1386-4C9F-859A-686B8D8A239B.jpeg" alt="Dit is de link die naar mijn worldbuilding leid."></a>
+                    </div>
+                </section>
+
+                <section class="btn30pct">
+                    <div class="btbg">
+                        <div class="bttxt">D&D</div>
+                        <a href="dnd.html"><img src="./img/IMG_5397.jpeg" alt="Dit is de link die naar mijn Dungeons and Dragons script gaat."></a>
+                    </div>
+                </section>
+                
         </main>
-        <footer>
-            <div class="footertekst">
-                <ul>
-                    <li>Naam: Daniel Dijkstra</li>
-                    <li>klas: Paars</li>
-                    <li>Datum: 2023</li>
-                    <li>Link: </li>
-                </ul>
-                </div>
-        </footer>
-    </div>
+
+    <footer>
+        <div class="footertekst">
+            <hr>
+            <ul>
+                <li>Naam: Daniel Dijkstra</li>
+                <li>klas: Paars</li>
+                <li>Datum: 2023</li>
+                <li>Link: </li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
